--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,79 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
+alembic==1.10.4
 anyio==3.6.2
+apache-airflow==2.5.3
+apache-airflow-providers-common-sql==1.4.0
+apache-airflow-providers-ftp==3.3.1
+apache-airflow-providers-http==4.3.0
+apache-airflow-providers-imap==3.1.1
+apache-airflow-providers-sqlite==3.3.2
+apispec==3.3.2
 appnope==0.1.3
+argcomplete==3.0.8
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
+asgiref==3.6.0
 asttokens==2.2.1
+async-timeout==4.0.2
 attrs==23.1.0
+Babel==2.12.1
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
+blinker==1.6.2
+cachelib==0.9.0
+cattrs==22.2.0
+certifi==2022.12.7
 cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+clickclick==20.10.2
+colorama==0.4.6
+colorlog==4.8.0
 comm==0.1.3
+ConfigUpdater==3.1.1
+connexion==2.14.2
+cron-descriptor==1.2.35
+croniter==1.3.14
+cryptography==40.0.2
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.13
+dill==0.3.6
+dnspython==2.3.0
+docutils==0.19
+email-validator==1.3.1
+exceptiongroup==1.1.1
 executing==1.2.0
 fastjsonschema==2.16.3
+Flask==2.2.4
+Flask-AppBuilder==4.1.4
+Flask-Babel==2.0.0
+Flask-Caching==2.0.2
+Flask-JWT-Extended==4.4.4
+Flask-Login==0.6.2
+Flask-Session==0.4.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.1.1
 fqdn==1.5.1
+frozenlist==1.3.3
+graphviz==0.20.1
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==0.17.0
+httpx==0.24.0
 idna==3.4
 importlib-metadata==6.6.0
+inflection==0.5.1
 ipykernel==6.22.0
 ipython==8.12.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.6
 isoduration==20.11.0
+itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
 jsonpointer==2.3
@@ -36,9 +87,22 @@ jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
+lazy-object-proxy==1.9.0
+linkify-it-py==2.0.0
+lockfile==0.12.2
+Mako==1.2.4
+Markdown==3.4.3
+markdown-it-py==2.2.0
 MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+marshmallow-oneofschema==3.0.1
+marshmallow-sqlalchemy==0.26.1
 matplotlib-inline==0.1.6
+mdit-py-plugins==0.3.5
+mdurl==0.1.2
 mistune==2.0.5
+multidict==6.0.4
 nbclassic==0.5.5
 nbclient==0.7.3
 nbconvert==7.3.1
@@ -51,9 +115,13 @@ packaging==23.1
 pandas==2.0.1
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.9.0
+pendulum==2.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==3.2.0
+pluggy==1.0.0
+prison==0.2.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
 psutil==5.9.5
@@ -61,32 +129,56 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.15.1
+PyJWT==2.6.0
 pyrsistent==0.19.3
+python-daemon==3.0.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
+python-nvd3==0.15.0
+python-slugify==8.0.1
 pytz==2023.3
+pytzdata==2020.1
 PyYAML==6.0
 pyzmq==25.0.2
 qtconsole==5.4.2
 QtPy==2.3.1
+requests==2.29.0
+requests-toolbelt==0.10.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.3.5
 Send2Trash==1.8.0
+setproctitle==1.3.2
 six==1.16.0
 sklearn==0.0.post4
 sniffio==1.3.0
 soupsieve==2.4.1
+SQLAlchemy==1.4.47
+SQLAlchemy-JSONField==1.0.1.post0
+SQLAlchemy-Utils==0.41.1
+sqlparse==0.4.4
 stack-data==0.6.2
+tabulate==0.9.0
+tenacity==8.2.2
+termcolor==2.3.0
 terminado==0.17.1
+text-unidecode==1.3
 tinycss2==1.2.1
 tornado==6.3.1
 traitlets==5.9.0
 typing_extensions==4.5.0
 tzdata==2023.3
+uc-micro-py==1.0.1
+unicodecsv==0.14.1
 uri-template==1.2.0
+urllib3==1.26.15
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
+Werkzeug==2.2.3
 widgetsnbextension==4.0.7
+wrapt==1.15.0
+WTForms==3.0.1
+yarl==1.9.2
 zipp==3.15.0
